--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "bitcoin-pool-stats",
-  "version": "0.1.0",
+  "name": "ckstats",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "postinstall": "prisma generate",
     "prisma:generate": "pnpx prisma generate",
     "prisma:migrate": "pnpx prisma migrate dev",
     "seed": "node scripts/seed.js",
