--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "update-stats": "ts-node scripts/updateStats.ts",
     "update-users": "node scripts/updateUsers.js",
     "cleanup": "node scripts/cleanOldStats.js",
-    "vacuum": "sqlite3 ./dev.sqlite3 'VACUUM;'"
+    "vacuum": "sqlite3 ./dev.sqlite3 'VACUUM;'",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "@tanstack/react-query": "^5.59.0",
-    "bitcoinjs-lib": "^6.1.0",
+    "bitcoinjs-lib": "^6.1.6",
     "daisyui": "^4.12.10",
     "next": "14.2.14",
     "react": "^18.3.1",
@@ -49,13 +51,8 @@
     "postcss": "^8.4.47",
     "prisma": "^5.20.0",
     "tailwindcss": "^3.4.13",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
-  },
-  "jest": {
-    "testEnvironment": "jsdom",
-    "setupFilesAfterEnv": [
-      "<rootDir>/jest.setup.js"
-    ]
   }
 }
