--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "cleanup": "node scripts/cleanOldStats.js",
     "vacuum": "prisma db execute --stdin < scripts/vacuum.sql",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "load-test": "clinic doctor --on-port 'autocannon -c 200 -d 10 localhost:$PORT' -- node ./node_modules/next/dist/bin/next start"
   },
   "dependencies": {
     "@prisma/client": "^5.21.0",
     "@tanstack/react-query": "^5.59.0",
     "bitcoinjs-lib": "^6.1.6",
     "daisyui": "^4.12.10",
-    "next": "14.2.14",
+    "next": "14.2.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.12.7"
@@ -39,7 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.14",
+    "eslint-config-next": "^14.2.16",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.0",
@@ -49,10 +50,12 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.47",
-    "prisma": "^5.21.0",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.13",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "autocannon": "^8.0.0",
+    "clinic": "^13.0.0"
   }
 }
