--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "vacuum": "prisma db execute --stdin < scripts/vacuum.sql",
     "test": "jest",
     "test:watch": "jest --watch",
-    "load-test": "clinic doctor --on-port 'autocannon -c 200 -d 10 localhost:$PORT' -- node ./node_modules/next/dist/bin/next start"
+    "load-test": "next lint --fix && next build && clinic doctor --on-port 'autocannon -c 200 -d 10 localhost:$PORT' -- node ./node_modules/next/dist/bin/next start"
   },
   "dependencies": {
     "@prisma/client": "^5.21.0",
