--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "load-test": "next lint --fix && next build && clinic doctor --on-port 'autocannon -c 200 -d 10 localhost:$PORT' -- node ./node_modules/next/dist/bin/next start"
   },
   "dependencies": {
-    "@prisma/client": "^5.21.0",
+    "@prisma/client": "^5.21.1",
     "@tanstack/react-query": "^5.59.0",
     "bitcoinjs-lib": "^6.1.6",
     "daisyui": "^4.12.10",
@@ -38,7 +38,9 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "autocannon": "^8.0.0",
     "autoprefixer": "^10.4.20",
+    "clinic": "^13.0.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.16",
     "eslint-config-prettier": "^9.1.0",
@@ -54,8 +56,6 @@
     "tailwindcss": "^3.4.13",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2",
-    "autocannon": "^8.0.0",
-    "clinic": "^13.0.0"
+    "typescript": "^5.6.2"
   }
 }
