fix: Update scripts for typeORM

--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "prisma:generate": "pnpx prisma generate",
-    "prisma:migrate": "pnpx prisma migrate dev",
     "seed": "ts-node -P tsconfig.scripts.json scripts/seed.ts",
-    "update-stats": "ts-node scripts/updateStats.ts",
-    "update-users": "ts-node scripts/updateUsers.ts",
-    "cleanup": "ts-node scripts/cleanOldStats.ts",
+    "update-users": "ts-node -P tsconfig.scripts.json scripts/updateUsers.ts",
+    "cleanup": "ts-node -P tsconfig.scripts.json scripts/cleanOldStats.ts",
     "vacuum": "prisma db execute --stdin < scripts/vacuum.sql",
     "test": "jest",
     "test:watch": "jest --watch",
