--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "tailwindcss": "^3.4.13",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "@types/pg": "^8.11.2"
+    "@types/pg": "^8.11.2",
+    "typescript": "^5.6.2"
   }
 }
