fix: Update next & increase available memory to node

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_OPTIONS='--max-old-space-size=4096' next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "seed": "ts-node -P tsconfig.scripts.json scripts/seed.ts",
@@ -22,7 +22,7 @@
     "@tanstack/react-query": "^5.59.0",
     "bitcoinjs-lib": "^6.1.6",
     "daisyui": "^4.12.10",
-    "next": "14.2.16",
+    "next": "14.2.18",
     "pg": "^8.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -42,10 +42,9 @@
     "autoprefixer": "^10.4.20",
     "clinic": "^13.0.0",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.16",
+    "eslint-config-next": "^14.2.18",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.2",
